-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 9
-
Component/s: hotspot
-
b126
-
ppc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8222931 | openjdk8u222 | Gustavo Romero | P4 | Resolved | Fixed | b01 |
Power 8 has vector instructions which can greatly improve the performance of the array copy stubs.
See http://mail.openjdk.java.net/pipermail/ppc-aix-port-dev/2016-April/002419.html
See http://mail.openjdk.java.net/pipermail/ppc-aix-port-dev/2016-April/002419.html
- backported by
-
JDK-8222931 PPC64: improve array copy stubs by using vector instructions
-
- Resolved
-
- relates to
-
JDK-8185969 PPC64: Improve VSR support to use up to 64 registers
-
- Resolved
-