8154156: PPC64: improve array copy stubs by using vector instructions

Reviewed-by: goetz, mdoerr